--- a/task-2/styles.css
+++ b/task-2/styles.css
@@ -6,7 +6,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #2c3552;
+    background-color: #152557;
     overflow: hidden;
 }
 
@@ -18,7 +18,7 @@ body {
 }
 
 .stopwatch {
-    background: #1d1d32; 
+    background: #e0c8ae; 
     padding: 40px; 
     border-radius: 50%; 
     width: 200px; 
@@ -27,14 +27,16 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 10px rgba(209, 146, 45, 0.539);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.701);    
 }
 
 h1 {
     margin: 0;
     color: #fff;
-    font-size: 2em;
+    font-size: 3em;
     margin-bottom: 20px;
+    font-family: 'Kode Mono', monospace; 
+    font-weight: 700;
 }
 
 #display-container {
@@ -43,7 +45,9 @@ h1 {
 
 #display {
     font-size: 36px;
-    color: rgb(255, 255, 255); 
+    color: #152557; 
+    font-family: 'Kode Mono', monospace; 
+    font-weight: 700; 
 }
 
 .buttons {
@@ -63,9 +67,9 @@ h1 {
 
 .laps-container {
     flex-grow: 1;
-    overflow-y: auto; /* Enable vertical scrolling for laps */
+    overflow-y: auto; 
     margin-top: 20px;
-    width: 300px; /* Match the width of the stopwatch */
+    width: 300px; 
 }
 
 #laps {
@@ -75,7 +79,7 @@ h1 {
 }
 
 #laps li {
-    background: #e0e0e0;
+    background: #e0c8ae;
     padding: 5px 10px;
     border-radius: 5px;
     margin-bottom: 5px;
