--- a/task-2/styles.css
+++ b/task-2/styles.css
@@ -90,15 +90,18 @@ body {
 }
 
 .content {
-    margin-left: 110px; 
-    padding: 20px;
-    margin-top: 80px; 
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    height: calc(100vh - 80px); 
-    box-sizing: border-box; 
-}
+    justify-content: center;
+    align-items: center;
+    margin-left: 110px;
+    padding: 20px;
+    margin-top: 80px; 
+    height: calc(100vh - 160px);
+    box-sizing: border-box;
+    margin-bottom: -90px;
+  }
+  
 
 .clock {
     text-align: center;
@@ -150,7 +153,7 @@ ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    text-align: left;
+    text-align: center;
     max-width: 100%; 
 }
 
