--- a/task-2/styles.css
+++ b/task-2/styles.css
@@ -153,13 +153,22 @@ ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    text-align: center;
-    max-width: 100%; 
+    text-align: center; 
+    max-width: 100%;
 }
 
 li {
+    font-family: 'DigitalNormal', sans-serif;
     color: #ffa500;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    font-size: 24px;
+    padding-left: 10px; /* Add padding to align items */
+    white-space: nowrap; /* Prevent text wrapping */
+}
+
+li span.lap-number {
+    display: inline-block;
+    width: 80px; /* Adjust width as needed for alignment */
 }
 
 @media (max-width: 768px) {
