--- a/task-2/styles.css
+++ b/task-2/styles.css
@@ -100,53 +100,37 @@ body {
     height: calc(100vh - 160px);
     box-sizing: border-box;
     margin-bottom: -90px;
-  }
-  
+}
 
 .clock {
     text-align: center;
 }
 
 .time {
-
     font-family: 'DigitalNormal', sans-serif;
-  
     font-size: 100px;
-  
     margin-bottom: 10px;
-  
-    
-  
-    display: flex; /* Add this line */
-  
-    width: 100px; /* Adjust the width to fit your timer display */
-  
+    display: flex; 
+    width: 100px; 
     text-align: center;
-  
-  }
-  
-  .time span {
-    margin: 0 5px; /* Add some margin between the time digits */
-  }
+}
+
+.time span {
+    margin: 0 5px; 
+}
 
 .time .milliseconds {
-    font-size: 24px; 
-    display: flex;
-    align-items: baseline;
+    font-size: 34px; 
+    display:contents
 }
 
 .buttons {
-
     display: flex;
-  
     gap: 10px;
-  
     margin-bottom: 10px;
-  
-    justify-content: center; /* Add this line */
+    justify-content: center; 
     padding-left: 60px;
-  
-  }
+}
 
 button {
     background: #ffa500;
@@ -186,13 +170,13 @@ li {
     color: #ffa500;
     margin-bottom: 10px;
     font-size: 24px;
-    padding-left: 10px; /* Add padding to align items */
-    white-space: nowrap; /* Prevent text wrapping */
+    padding-left: 10px; 
+    white-space: nowrap; 
 }
 
 li span.lap-number {
     display: inline-block;
-    width: 80px; /* Adjust width as needed for alignment */
+    width: 80px; 
 }
 
 @media (max-width: 768px) {
