--- a/task-2/styles.css
+++ b/task-2/styles.css
@@ -166,18 +166,22 @@ ul {
 }
 
 li {
-    font-family: 'DigitalNormal', sans-serif;
-    color: #ffa500;
-    margin-bottom: 10px;
-    font-size: 24px;
-    padding-left: 10px; 
-    white-space: nowrap; 
+  font-family: 'DigitalNormal', sans-serif;
+  color: #ffa500;
+  margin-bottom: 10px;
+  font-size: 24px;
+  padding-left: 10px;
+  white-space: nowrap;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #fff;
+  margin-left: 50px;
 }
 
 li span.lap-number {
     display: inline-block;
-    width: 80px; 
-}
+    width: 120px; 
+    text-align: right; 
+  }
 
 @media (max-width: 768px) {
     .horizontal-bar {
