--- a/task-2/styles.css
+++ b/task-2/styles.css
@@ -94,7 +94,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 110px;
+    margin-left: 80px;
     padding: 20px;
     margin-top: 80px; 
     height: calc(100vh - 160px);
@@ -129,7 +129,7 @@ body {
     gap: 10px;
     margin-bottom: 10px;
     justify-content: center; 
-    padding-left: 60px;
+    padding-left: 55px;
 }
 
 button {
@@ -170,18 +170,29 @@ li {
   color: #ffa500;
   margin-bottom: 10px;
   font-size: 24px;
-  padding-left: 10px;
-  white-space: nowrap;
-  padding-bottom: 10px;
+  padding: 5px 0; 
   border-bottom: 1px solid #fff;
-  margin-left: 50px;
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 100%;
+  box-sizing: border-box; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 100px;
 }
 
 li span.lap-number {
     display: inline-block;
-    width: 120px; 
+    width: 80px; 
     text-align: right; 
-  }
+}
+
+li span.lap-time {
+    display: inline-block;
+    width: 200px; 
+    text-align: left; 
+}
 
 @media (max-width: 768px) {
     .horizontal-bar {
